// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders large box shadow with default border 1`] = `
<div
  className="hrEEgb"
/>
`;

exports[`Card renders medium box shadow with default border 1`] = `
<div
  className="iVJhgP"
/>
`;

exports[`Card renders medium box shadow with specified borderRadius 1`] = `
<div
  className="hYHkps"
/>
`;

exports[`Card renders medium box shadow with specified borderWidth 1`] = `
<div
  className="kGLACV"
/>
`;

exports[`Card renders small box shadow with default border 1`] = `
.c0 {
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16);
  border: 1px solid #d1d6db;
  border-radius: 2px;
}

<div
  className="c0 "
/>
`;

exports[`Card renders xlarge box shadow with default border 1`] = `
<div
  className="dNuYra"
/>
`;
